# UFO_Share

source/: CMakeLists.txt
source/internal_libraries/: CMakeLists.txt
source/internal_libraries/lib_discoverer/: CMakeLists.txt
source/internal_libraries/lib_discoverer/include/: discoverer.hpp
source/internal_libraries/lib_discoverer/src/: discoverer.cpp
source/internal_libraries/lib_peer_transfer/: CMakeLists.txt
source/internal_libraries/lib_peer_transfer/include/: peer_transfer.hpp
source/internal_libraries/lib_peer_transfer/src/: peer_transfer.cpp
source/internal_libraries/main/src/: main.cpp
